<resources>
    <string name="app_name">Тренер для глаз</string>
    <string name="picture">Стерео картинки</string>
    <string name="start">Старт</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="execrsise">Execrsise</string>
    <string name="settings">Настройки</string>
    <string name="logo">logo</string>
    <string name="save">Save</string>
    <string name="stop_button">Stop button</string>
    <string name="exercise">Упражнения</string>
    <string-array name="titles">
        <item>Расслабление</item>
        <item>Сквозь пальцы</item>
        <item>Письмо носом</item>
        <item>Посмотрите вверх</item>
        <item>Посмотрите вниз</item>
        <item>Вращение глаз</item>
        <item>Невозможное упражнение</item>
    </string-array>
    <string-array name="descriptionsExercise">
        <item>Сядьте прямо, расслабьтесь. Прикройте глаза таким образом: середина ладони правой руки должна находиться напротив правого глаза, то же самое с левой рукой. Ладони должны лежать мягко, не нужно с силой прижимать их к лицу. Пальцы рук могут перекрещиваться на лбу, могут располагаться рядом — как вам удобнее. Главное, чтобы не было «щелочек», пропускающих свет. Когда вы в этом удостоверились, опустите веки. В результате получается, что ваши глаза закрыты и, кроме того, прикрыты ладонями рук.
            Теперь опустите локти на стол. Главное, чтобы шея и позвоночник находились почти на одной прямой линии. Проверьте, чтобы ваше тело не было напряжено, и руки, и спина, и шея должны быть расслаблены. Дыхание должно быть спокойным.<br> Упражнение можно выполнять и на работе, устраивая себе краткие перерывы. Даже за 10-15 секунд ваши глаза успеют немного отдохнуть. Но, конечно, будет лучше, если вы выделите для расслабления хотя бы несколько минут.</br></item>
        <item>Согните руки в локте так, чтобы ладони находились чуть ниже уровня глаз. Разомкните пальцы. Делайте плавные повороты головой вправо-влево, при этом смотрите сквозь пальцы, вдаль, а не на них. Пусть взгляд скользит, не задерживаясь на чем-то одном. Если вы делаете все правильно, руки будут «проплывать» мимо вас: вам должно казаться, что они движутся.<p>Сделайте упражнение 20–30 раз, дышите при этом свободно, не напрягайтесь.</p>

<p>Если вы не можете добиться эффекта движения, попробуйте сделать так. Вытяните указательный палец. Он должен «смотреть» вверх. А ваш нос должен его касаться. Закройте глаза и поворачивайте голову вправо-влево так, чтобы нос, проходя мимо пальца, касался его. Не переставая поворачивать голову, откройте глаза (только не сосредотачивайте свое внимание на пальце, смотрите вдаль!). Вы наверняка увидите, что палец «движется».</p>></item>
        <item>Упражнение можно выполнять и лежа, и стоя, но лучше всего сидя. Расслабьтесь. Закройте глаза. Представьте, что кончик носа — это ручка, которой можно писать (или вообразите, что линию носа продолжает длинная указка-ручка, — все зависит от того, как вам удобнее, главное, чтобы вы и ваши глаза не напрягались). Теперь пишите (или рисуйте) в воздухе своей ручкой. Что именно, не важно.

            <p>Если вы хотите немного расслабить глаза, сидя прямо на рабочем месте, можете представить, что пишете не ручкой, а кончиком иголки на головке булавки. Тогда коллеги не будут у вас спрашивать, чем это вы занимаетесь, ведь со стороны движения вашей головы будут практически незаметны.</p></item>
        <item>Глубоко и медленно вдыхая (желательно, животом), посмотрите в межбровье, задержите глаза в этом положении на несколько секунд. Медленно выдыхая, верните глаза в исходное положение и закройте на несколько секунд. Со временем, постепенно (не раньше, чем через 2–3 недели), задержку в верхнем положении можно увеличить (через полгода до нескольких минут). Повторите упражнение 10 раз.</item>
        <item>Глубоко вдыхая, посмотрите на кончик носа. Сделайте задержку на несколько секунд и, выдыхая, верните глаза в исходное положение. Закройте глаза на небольшое время. Повторите упражнение 10 раз.</item>
        <item>Вдыхая, опустить глаза вниз и затем медленно поворачивать их по часовой стрелке, остановившись в самой верхней точке (на 12-ти часах). Не задерживаясь, начать выдох и продолжить поворот глаз по часовой стрелке вниз (до 6 часов). <p> Для начала достаточно одного круга, постепенно можно довести их количество до десяти кругов. При этом нужно, не задерживаясь после первого круга, сразу начать второй. Закрыть после выполнения упражнения, глаза на несколько секунд. Затем сделать это упражнение, поворачивая глаза против часовой стрелки. </p><p>В завершение комплекса нужно сделать пальминг (3-5 минут)</p>></item>
        <item>Перед выполнением этого упражнения необходимо получить консультацию врача специалиста. Выполненние этого упражнения связано с риском и мы не несем никакой ответственности за последствия</item>
    </string-array>
    <string-array name="timeSet">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

</resources>